--- a/migrations/Makefile
+++ b/migrations/Makefile
@@ -4,4 +4,7 @@ db_up:
 db_down:
 	psql -U postgres -d nats_streaming -a -f ~/projects/nats-server/migrations/down.sql  
 
+db_clear:
+	psql -U postgres -d nats_streaming -a -f ~/projects/nats-server/migrations/down.sql  
+	psql -U postgres -d nats_streaming -a -f ~/projects/nats-server/migrations/up.sql > /dev/null
 
